2005-03-09  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c (exif_data_save_data_content): Save entries in
		the correct order.

2005-03-09  Lutz Mueller <lutz@users.sourceforge.net>

	* test/test-mem.c: Write size to loader to make the test work again.

2005-03-09  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/canon/exif-mnote-data-canon.c (exif_mnote_data_canon_save):
		Ensure even offsets.

2005-03-09  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c (exif_data_save_data_entry): According to the TIFF
		specification, the offset must be an even number. If we need to introduce
	  a padding byte, we set it to 0.

2005-03-09  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-utils.[c,h] (exif_array_set_byte_order): New function.
	* libexif/exif-data.c
	* libexif/canon/exif-mnote-data-canon.c
	* libexif/olympus/exif-mnote-data-olympus.c
	* libexif/pentax/exif-mnote-data-pentax.c: Use new function.

2005-03-09  Jan Patera <patera@users.sourceforge.net>

	* exif_data.c: Final fix of Ubuntu Security Notice USN-91-1
	  https://bugzilla.ubuntulinux.org/show_bug.cgi?id=7152
	  (CAN-2005-0664)

2005-02-08  Hans Ulrich Niedermann <gp@n-dimensional.de>

	* autogen.sh: Updated build system:
	  - doesn't require gettextize any more (using autopoint now)
	  - uses all the built-in magic from autoreconf
	* configure.in, */Makefile.am: Build variable cleanup:
	  - use common definition for AM_CFLAGS (remove INCLUDES in
	    **/Makefile.am)
	  - define LIBEXIF_LOCALEDIR and LIBMNOTE_LOCALEDIR in config.h
	  - allow user to add CFLAGS at ./configure time by setting CFLAGS
	  - add intl/ to include path only if building the included
	    libintl
	  - check whether -lm is actually required. This enables
	    crosscompilation for windows targets:
	    ./configure --host=i586-mingw32msvc --disable-nls
	* m4/gp-config-msg.m4, m4/gp-gettext-hack.m4: New macros

2004-12-17  Lutz Mueller <lutz@users.sourceforge.net>
